--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,52 +1,75 @@
-* {
-    box-sizing: border-box;
-}
-
-h1{
-  text-align: left;
-  margin-right: 2rem
-}
-
 body {
     font-family: Arial, sans-serif;
     color: #ffffff;
     margin: 0;
     padding: 0;
+    background-color: #272727;
 }
 
 .container {
-	background-color: #272727;
+
 	position: relative;
-	overflow: hidden;
+	overflow: visible;
 	width: 768px;
-	max-width: 100%;
-	min-height: 480px;
+	margin: auto;
+	min-height: 450px;
+        border-style: outset;
 }
 
 .form-container {
-    margin: 2rem 0;
+	postion:absolute;
+    	left: 0;
+	width : 50%;
+	text-align: center;
 }
 
-.form-container h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-    
+
+.image-container {
+    	position: absolute;
+	right: 0;
+	top: 0;
 }
 
-.form-container form {
-    display: flex;
-    flex-direction: column;
-    margin-right: 2rem
+.radio-container {
+  display: inline-block;
+  margin-bottom: 10px;
+  font-size: 18px;
 }
 
-.form-container a{
-	width:50%;
-	color: #ffffff;
+.radio-container input[type="radio"] {
+  display: none;
 }
 
-.form-container label {
-    font-size: 1rem;
-    margin-bottom: 0.5rem;
+.radio-container .checkmark {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
+.radio-container input[type="radio"]:checked + .checkmark {
+  background-color: #F73634;
+  border-color: #F73634;
+}
+
+.radio-container .checkmark:after {
+  content: "";
+  display: block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin: 5px;
+  background-color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.radio-container input[type="radio"]:checked + .checkmark:after {
+  opacity: 1;
 }
 
 .form-container input {
@@ -55,12 +78,16 @@ body {
     font-size: 1rem;
     padding: 0.5rem;
     margin-bottom: 1rem;
-    width: 50%;
+    width: 70%;
 }
 
+.form-container hr {
+	width: 80%;
+	border: 1px solid #F73634;
+}
 
 .form-container button {
-    background-color: #4CAF50;
+    background-color: #F73634;
     border: none;
     border-radius: 1rem;
     color: #fff;
@@ -73,19 +100,5 @@ body {
 }
 
 .form-container button:hover {
-    background-color: #3e8e41;
-}
-
-.image-container {
-    	position: absolute;
-	top: 0;
-	left: 50%;
-	width: 50%;
-	height: 100%;
-}
-
-.image-container img {
-    padding: 0.5rem;
-    height: auto;
-    border-radius: 1rem;
+    background-color: #6E1E00;
 }
