Edited the login page and created images folder

--- a/ResultStyle.css
+++ b/ResultStyle.css
@@ -7,7 +7,7 @@ img{
 body {
     min-height: 100vh;
     font-family: 'Arial', sans-serif;
-    background-image: url('Background.png');
+    background-image: url("Images/Background.png");
     color: #F73634;
 }
 
