--- a/indexStyle.css
+++ b/indexStyle.css
@@ -1,105 +1,143 @@
 body {
   font-family: Arial, sans-serif;
-  min-height: 100vh;
-  color: #ffffff;
+  color: #000000;
   margin: 0;
   padding: 0;
-  background-color: #272727;
+  background-color: #ffffff;
 }
 
 .container {
-	position: relative;
-	overflow: visible;
-	width: 768px;
-	margin: auto;
-	min-height: 450px;
+  display: flex;
+  align-items: stretch;
+  height: 100vh;
 }
 
 .form-container {
-  margin-left: auto;
-  margin-right: auto;
-	width : 50%;
-	text-align: center;
-}
-
-.radio-container {
-  display: inline-block;
-  margin-bottom: 10px;
-  font-size: 18px;
-}
-
-.radio-container input[type="radio"] {
-  display: none;
-}
-
-.radio-container .checkmark {
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  margin-left: 10px;
-  border: 1px solid #ccc;
-  border-radius: 50%;
-  vertical-align: middle;
-  cursor: pointer;
-}
-
-.radio-container input[type="radio"]:checked + .checkmark {
-  background-color: #F73634;
-  border-color: #F73634;
-}
-
-.radio-container .checkmark:after {
-  content: "";
-  display: block;
-  width: 10px;
-  height: 10px;
-  border-radius: 50%;
-  margin: 5px;
-  background-color: #fff;
-  opacity: 0;
-  transition: opacity 0.3s;
-}
-
-.radio-container input[type="radio"]:checked + .checkmark:after {
-  opacity: 1;
-}
-
-.form-container input {
-    border: 1px solid #ccc;
-    border-radius: 1rem;
-    font-size: 1rem;
-    padding: 0.5rem;
-    margin-bottom: 1rem;
-    width: 70%;
-}
-
-.form-container hr {
-	width: 80%;
-	border: 1px solid #F73634;
-}
-
-.form-container button {
-    background-color: #F73634;
-    border: none;
-    border-radius: 1rem;
-    color: #fff;
-    font-size: 1rem;
-    padding: 0.5rem;
-    cursor: pointer;
-    width: 50%;
-    margin-top: 3rem;
-    transition: background-color 0.3s ease;
-}
-
-.form-container button:hover {
-    background-color: #6E1E00;
-}
-
-footer {
-  background-color: #000000;
-  color: #ffffff; 
-  padding: 5px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  padding: 20px;
+  border-radius: 30px;
+  flex-grow: 1;
   text-align: center;
-  position: sticky;
-  top: 100%;
+  margin: 5%;
+}
+
+.form-container h1 {
+  margin-bottom: 20px;
+  font-size: 3rem;
+  
+}
+
+.form-container p {
+  margin-bottom: 20px; 
+  font-size: 1rem; 
+}
+
+.form-group {
+  margin-bottom: 1.5rem;
+  width: 100%;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+  text-align: left;
+}
+
+.form-group input {
+  border: 1px solid #cccccc;
+  border-radius: 35px;
+  font-size: 1rem;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.forgot-password {
+  display: block;
+  margin-top: 10px;
+  color: #ccc;
+  text-decoration: none;
+  float: left;
+  margin-bottom: 10px;
+}
+
+.forgot-password:hover {
+  text-decoration: underline;
+  color: black;
+}
+
+hr {
+  width: 100%;
+  border: none;
+  border-top: 1px solid #000000;
+  margin: 20px 0;
+}
+
+button {
+  background-color: #000000;
+  border: 1px solid #000000;
+  border-radius: 25px;
+  color: #ffffff;
+  font-size: 1rem;
+  padding: 0.5rem;
+  width: 100%;
+  max-width: none;
+  margin-top: 2rem;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #ffffff6c;
+  color: #000000;
+}
+
+.image-container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.image-container img {
+  width: 90%;
+  height: auto;
+  border-radius: 20px;
+}
+
+@media screen and (max-width: 768px) {
+  .form-container {
+      padding: 10px;
+  }
+  
+  .form-container h1 {
+      font-size: 2rem;
+  }
+  
+  .form-container p {
+      font-size: 1rem;
+  }
+  
+  .form-group {
+      width: 100%;
+  }
+  
+  button,
+  .forgot-password,
+  hr {
+      width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .image-container {
+      display: none;
+  }
+  .container {
+      flex-direction: column;
+  }
 }
